--- a/app/src/main/res/layout/grid_layout_item.xml
+++ b/app/src/main/res/layout/grid_layout_item.xml
@@ -12,6 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -27,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@mipmap/genius"/>
+                android:src="@mipmap/genius" />
 
             <TextView
                 android:id="@+id/recycler_item_textview"
