--- a/easy-dialog/src/main/res/values/colors.xml
+++ b/easy-dialog/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
 
     <color name="font_normal">#626574</color>
     <color name="font_darker">#2b2d3a</color>
-    <color name="font_lighter">#adafb9</color>
+    <color name="font_lighter">#A9A9A9</color>
     <color name="font_black">#000000</color>
     <color name="font_danger">#dd3b44</color>
     <color name="font_white">#ffffff</color>
